[gd_scene load_steps=15 format=3 uid="uid://dj1s12fwy32rr"]

[ext_resource type="Script" path="res://scenes/locations/Shade's Office.gd" id="1_4t6ht"]
[ext_resource type="Texture2D" uid="uid://bo7hcs3q5hnh8" path="res://assets/imports/graphics/backgrounds/without_object/shades_office.png" id="2_8igll"]
[ext_resource type="Texture2D" uid="uid://dedtg84awrc8d" path="res://assets/imports/graphics/objects/sticky_notes/options.png" id="3_j2hj0"]
[ext_resource type="Script" path="res://scenes/UI/sticky_notes/options_button.gd" id="4_xkdys"]
[ext_resource type="Texture2D" uid="uid://cd4o35ipvoeqs" path="res://assets/imports/graphics/objects/sticky_notes/exit.png" id="5_s314g"]
[ext_resource type="Script" path="res://scenes/UI/sticky_notes/exit_button.gd" id="6_e7ndo"]
[ext_resource type="Texture2D" uid="uid://cd170li0engef" path="res://assets/imports/graphics/objects/sticky_notes/save.png" id="7_letej"]
[ext_resource type="Script" path="res://scenes/UI/main/object_button.gd" id="8_gsv3f"]
[ext_resource type="Texture2D" uid="uid://c760tmktstqg3" path="res://assets/imports/graphics/objects/office/computer.png" id="9_x077g"]
[ext_resource type="PackedScene" path="res://scenes/UI/Arrow.tscn" id="10_i75gh"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jypko"]
texture = ExtResource("9_x077g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nulqq"]
texture = ExtResource("3_j2hj0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7jlq8"]
texture = ExtResource("5_s314g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tswg3"]
texture = ExtResource("7_letej")

[node name="Shade\'s Office" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4t6ht")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_8igll")

[node name="ComputerButton" type="Button" parent="."]
custom_minimum_size = Vector2(447, 454)
layout_mode = 0
offset_left = 331.0
offset_top = 241.0
offset_right = 778.0
offset_bottom = 695.0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_jypko")
theme_override_styles/disabled = SubResource("StyleBoxTexture_jypko")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_jypko")
theme_override_styles/hover = SubResource("StyleBoxTexture_jypko")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jypko")
theme_override_styles/normal = SubResource("StyleBoxTexture_jypko")
script = ExtResource("8_gsv3f")
is_hidden = false

[node name="OptionsButton" type="Button" parent="."]
custom_minimum_size = Vector2(77, 75)
layout_mode = 0
offset_left = 709.0
offset_top = 194.0
offset_right = 786.0
offset_bottom = 270.0
focus_previous = NodePath("../ExitButton")
theme_override_styles/focus = SubResource("StyleBoxTexture_nulqq")
theme_override_styles/disabled = SubResource("StyleBoxTexture_nulqq")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_nulqq")
theme_override_styles/hover = SubResource("StyleBoxTexture_nulqq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_nulqq")
theme_override_styles/normal = SubResource("StyleBoxTexture_nulqq")
script = ExtResource("4_xkdys")
hover_sfx = "Sticky Note Hover"
click_sfx = ""
is_hidden = false

[node name="ExitButton" type="Button" parent="."]
custom_minimum_size = Vector2(86, 75)
layout_mode = 0
offset_left = 744.0
offset_top = 74.0
offset_right = 830.0
offset_bottom = 149.0
focus_previous = NodePath("../PlayButton")
theme_override_styles/focus = SubResource("StyleBoxTexture_7jlq8")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7jlq8")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_7jlq8")
theme_override_styles/hover = SubResource("StyleBoxTexture_7jlq8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7jlq8")
theme_override_styles/normal = SubResource("StyleBoxTexture_7jlq8")
script = ExtResource("6_e7ndo")
hover_sfx = "Sticky Note Hover"
is_hidden = false

[node name="SaveButton" type="Button" parent="."]
custom_minimum_size = Vector2(88, 87)
layout_mode = 0
offset_left = 826.0
offset_top = 138.0
offset_right = 914.0
offset_bottom = 225.0
focus_previous = NodePath("../PlayButton")
theme_override_styles/focus = SubResource("StyleBoxTexture_tswg3")
theme_override_styles/disabled = SubResource("StyleBoxTexture_tswg3")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_tswg3")
theme_override_styles/hover = SubResource("StyleBoxTexture_tswg3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tswg3")
theme_override_styles/normal = SubResource("StyleBoxTexture_tswg3")
script = ExtResource("8_gsv3f")
hover_sfx = "Sticky Note Hover"
click_sfx = ""
is_hidden = false

[node name="ArrowPC" parent="." instance=ExtResource("10_i75gh")]
layout_mode = 0
offset_left = 510.0
offset_top = 132.0
offset_right = 766.0
offset_bottom = 388.0
scale = Vector2(0.5, 0.5)
